--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,11 +11,10 @@ activityCompose = "1.9.0"
 composeBom = "2024.05.00"
 realm = "1.11.0"
 navigationCompose = "2.7.7"
+kodein = "7.21.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-calendar = { module = "com.kizitonwose.calendar:compose", version.ref = "calendar" }
-realm-library = { group = "io.realm.kotlin", name="library-base", version.ref = "realm" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -30,6 +29,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+calendar = { module = "com.kizitonwose.calendar:compose", version.ref = "calendar" }
+realm-library = { group = "io.realm.kotlin", name = "library-base", version.ref = "realm" }
+kodein = { group = "org.kodein.di", name = "kodein-di-framework-compose", version.ref = "kodein" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
